--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'groovy'
+	id 'java'
 	id 'org.springframework.boot' version '3.2.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.github.johnrengelman.shadow' version '8.1.1'
@@ -22,8 +22,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.groovy:groovy'
-	implementation 'org.apache.groovy:groovy-json'
 	implementation 'com.amazonaws:aws-lambda-java-core:1.2.2'
 	implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
 	implementation 'org.apache.poi:poi-ooxml:5.4.0'
